--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ button:hover{
 
 <script>
 
-const API_URL = "PASTE_YOUR_WEB_APP_URL";
+const API_URL = "https://script.google.com/a/macros/paruluniversity.ac.in/s/AKfycbxMicZzArAZ7HM_FbfWc7Ie5hsMSPn3VKsWCNY6RkP5VUom-91nC38nK3nJXCsjKNrF0g/exec";
 
 async function login(){
 
