--- a/dashboard.html
+++ b/dashboard.html
@@ -132,7 +132,7 @@ Mentor Dashboard
 
 <script>
 
-const API_URL = "YOUR_WEB_APP_URL";
+const API_URL = "https://script.google.com/a/macros/paruluniversity.ac.in/s/AKfycbxMicZzArAZ7HM_FbfWc7Ie5hsMSPn3VKsWCNY6RkP5VUom-91nC38nK3nJXCsjKNrF0g/exec";
 
 
 // 🔐 BLOCK DIRECT ACCESS
